--- a/translations_projects.json
+++ b/translations_projects.json
@@ -5,6 +5,7 @@
     "contact": "Contact",
     "skills": "Skills",
     "projects": "Projects",
+    "services": "Services",
     "projects_title": "Projects",
     "project_1_title": "OpenCart Upgrade Project - Fuel Cell Store",
     "project_1_duration": "Mar 2024 - Sep 2024",
@@ -38,6 +39,7 @@
     "contact": "联系",
     "skills": "技能",
     "projects": "项目",
+    "services": "服务",
     "projects_title": "项目",
     "project_1_title": "OpenCart 升级项目 - 燃料电池商店",
     "project_1_duration": "2024年3月 - 2024年9月",
